--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <p>3° Andar sala de teste de produtos</p>
         <p>4º Andar é armazenado os materiais </p>
         <p>5° Sala da <strong>CEO</strong>  </p>
+		<img src = "glow.jpg">
 	</body>
 </html>
