--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 	<head>
         <meta charset="UTF-8">
 		<title>AS N</title>
-	</head>
-	<body>
+        <style>
+            body {
+                background: #FFE4E1;
+            }
+            </style>
+	</head> 
+	<body> <hi> <strong>As N</strong>
 		<p>  Nossa empresa se chama <strong>glowl up</strong>, ela tem 5 andares e é localizada no <em>centro da cidade</em></p>
         <p>1° Andar é a recepção, onde é marcado as consultas para mulheres sua aparencia </p>
         <p>2° Andar onde os funcionarios trabalham</p>
