--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-        <meta charset="UTF-8">
-		<title>AS N</title>
-        <style>
-            body {
-                background: #FFE4E1;
-            }
-            </style>
-	</head> 
-	<body> <hi> <strong>As N</strong>
-		<p>  Nossa empresa se chama <strong>glowl up</strong>, ela tem 5 andares e é localizada no <em>centro da cidade</em></p>
-        <p>1° Andar é a recepção, onde é marcado as consultas para mulheres sua aparencia </p>
-        <p>2° Andar onde os funcionarios trabalham</p>
-        <p>3° Andar sala de teste de produtos</p>
-        <p>4º Andar é armazenado os materiais </p>
-        <p>5° Sala da <strong>CEO</strong>  </p>
-		<img src = "glow.jpg">
-	</body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>AS N</title>
+    <style>
+        body {
+            background: #FFE4E1;
+        }
+
+        h1 {
+            text-align: center;
+        }
+        <h2> "estetica e beleza" <h2>
+    </style>
+</head>
+
+<body>
+    <h1> <strong>As N</strong></h1>
+    <p> Nossa empresa se chama <strong>glowl up</strong>, ela tem 5 andares e é localizada no <em>centro da cidade</em>
+    </p>
+    <p>1° Andar é a recepção, onde é marcado as consultas para mulheres sua aparencia </p>
+    <p>2° Andar onde os funcionarios trabalham</p>
+    <p>3° Andar sala de teste de produtos</p>
+    <p>4º Andar é armazenado os materiais </p>
+    <p>5° Sala da <strong>CEO</strong> </p>
+    <img src = "glow.jpg">
+</body>
+
 </html>
