--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h1> <strong>As N</strong></h1>
     <p> Nossa empresa se chama <strong>glowl up</strong>, ela tem 5 andares e é localizada no <em>centro da cidade</em>
     </p>
-    <p>1° Andar é a recepção, onde é marcado as consultas para mulheres sua aparencia </p>
-    <p>2° Andar onde os funcionarios trabalham</p>
-    <p>3° Andar sala de teste de produtos</p>
+    <p>1° Andar é a recepção, onde é marcado as consultas para mulheres melhorarem sua aparencia </p>
+    <p>2° Andar é onde os funcionarios trabalham</p>
+    <p>3° Andar é a sala de teste de produtos</p>
     <p>4º Andar é armazenado os materiais </p>
     <p>5° Sala da <strong>CEO</strong> </p>
     <img src = "glow.jpg">
