coloquei em ingles palavras em portugues

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPEhtml >
+<!DOCTYPE html >
 < html  lang =" pt-br " >
 
-    < cabeça >
+    < head>
         < meta  charset =" UTF-8 " >
         < title > AS N </ title >
-        < estilo >
-            corpo {
-                fundo :  # FFE4E1 ;
+        < style >
+            body {
+                background :  # FFE4E1 ;
             }
 
             h1 {
@@ -15,10 +15,10 @@
             h2 {
                 text-align : centro;
             }
-        </ estilo >
-    </ cabeça >
-    < corpo >
-        < h1 >  < forte > Como N </ forte > </ h1 >
+        </ style >
+    </ head >
+    < body >
+        < h1 >  < strong > as N </ strong > </ h1 >
         < h2 > "estetica e beleza" < /h2 >
         < p > Nossa empresa se chama < strong > glowl up </ strong > , ela tem 5 andares e é localizada no < em > centro da cidade </ em > </ p >
         < p > 1° Andar é a recepção, onde é marcado como consultas para melhorarem sua aparência </ p >
@@ -27,6 +27,6 @@
         < p > 4º Andar é armazenado os materiais </ p >
         < p > 5° Sala da < strong > CEO </ strong >  </ p >
         < img  src = " glow.jpg " >
-    </ corpo >
+    </ body >
 
     </ html >
