--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html >
-< html  lang =" pt-br " >
+<!DOCTYPE html>
+<html  lang = "pt-br">
 
-    < head>
-        < meta  charset =" UTF-8 " >
-        < title > AS N </ title >
-        < style >
+    <head>
+        <meta charset ="UTF-8">
+        <title> AS N </title>
+        <style>
             body {
                 background :  # FFE4E1 ;
             }
 
             h1 {
-                text-align : centro;
+                text-align : center;
             }
             h2 {
-                text-align : centro;
+                text-align : center;
             }
-        </ style >
-    </ head >
-    < body >
-        < h1 >  < strong > as N </ strong > </ h1 >
-        < h2 > "estetica e beleza" < /h2 >
-        < p > Nossa empresa se chama < strong > glowl up </ strong > , ela tem 5 andares e é localizada no < em > centro da cidade </ em > </ p >
-        < p > 1° Andar é a recepção, onde é marcado como consultas para melhorarem sua aparência </ p >
-        < p > 2° Andar é onde os funcionarios trabalham </ p >
-        < p > 3° Andar é a sala de teste de produtos </ p >
-        < p > 4º Andar é armazenado os materiais </ p >
-        < p > 5° Sala da < strong > CEO </ strong >  </ p >
-        < img  src = " glow.jpg " >
-    </ body >
+        </style>
+    </head>
+    <body>
+        <h1>  <strong> as N </strong> </h1>
+        <h2> "estetica e beleza" </h2>
+        <p> Nossa empresa se chama <strong> glowl up </strong> , ela tem 5 andares e é localizada no <em> centro da cidade </em> </p>
+        <p> 1° Andar é a recepção, onde é marcado como consultas para melhorarem sua aparência </p>
+        <p> 2° Andar é onde os funcionarios trabalham </p>
+        <p> 3° Andar é a sala de teste de produtos </p>
+        <p> 4º Andar é armazenado os materiais </p>
+        <p> 5° Sala da <strong> CEO </strong>  </p>
+        <img  src = " glow.jpg ">
+    </body>
 
-    </ html >
+    </html>
