Adicionamos preços ao lado da imagem. ok

--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
     <head>
         <meta charset ="UTF-8">
         <title> AS N </title>
-        <style>
-            body {
-                background :  #FFE4E1 ;
-            }
-
-            h1 {
-                text-align : center;
-            }
-            h2 {
-                text-align : center;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
@@ -28,6 +17,14 @@
         <p> 4º Andar é armazenado os materiais </p>
         <p> 5° Sala da <strong> CEO </strong>  </p>
         <img  src = " glow.jpg ">
+        <ul>
+            <li> Rinoplastia; 12.599,00 </li>
+            <li> Botox; 2.299,00 </li>
+            <li> Otoplastia; 9.999,00 </li>
+            <li> Ritidoplastia; 7.999,00 a 18.000,00 </li>
+            <li> Mentoplastia; 11.000,00 </li>
+        </ul>
     </body>
 
-    </html>
+    </html>                                             
+
