--- a/index.html
+++ b/index.html
@@ -8,23 +8,41 @@
     </head>
     
     <body>
-        <h1>  <strong> as N </strong> </h1>
-        <h2> "estetica e beleza" </h2>
-        <p> Nossa empresa se chama <strong> glowl up </strong> , ela tem 5 andares e é localizada no <em> centro da cidade </em> </p>
-        <p> 1° Andar é a recepção, onde é marcado como consultas para melhorarem sua aparência </p>
-        <p> 2° Andar é onde os funcionarios trabalham </p>
-        <p> 3° Andar é a sala de teste de produtos </p>
-        <p> 4º Andar é armazenado os materiais </p>
-        <p> 5° Sala da <strong> CEO </strong>  </p>
-        <img  src = " glow.jpg ">
-        <ul>
-            <li> Rinoplastia; 12.599,00 </li>
-            <li> Botox; 2.299,00 </li>
-            <li> Otoplastia; 9.999,00 </li>
-            <li> Ritidoplastia; 7.999,00 a 18.000,00 </li>
-            <li> Mentoplastia; 11.000,00 </li>
-        </ul>
+        <div>
+            <h1>  <strong> as N </strong> </h1>
+            <h2> "estética e beleza" </h2>
+            <p> Nossa empresa se chama <strong> glowl up </strong> , ela tem 5 andares e é localizada no <em> centro da cidade </em> </p>
+            <p> 1° Andar é a recepção, onde é marcado como consultas para melhorarem sua aparência </p>
+            <p> 2° Andar é onde os funcionarios trabalham </p>
+            <p> 3° Andar é a sala de teste de produtos </p>
+            <p> 4º Andar é armazenado os materiais </p>
+            <p> 5° Sala da <strong> CEO </strong>  </p>
+            <img  src = " glow.jpg ">
+            
+        </div>
+
+        <div>
+            <h2>Serviços</h2>
+            <ul>
+                <li> Rinoplastia; 12.599,00 </li>
+                <li> Botox; 2.299,00 </li>
+                <li> Otoplastia; 9.999,00 </li>
+                <li> Ritidoplastia; 7.999,00 a 18.000,00 </li>
+                <li> Mentoplastia; 11.000,00 </li>
+            </ul>
+      </div>
+
+        <div>
+            <h2>benefícios</h2>
+            <ul>
+                <li> Produtos com qualidades; </li>
+                <li> Melhores preços; </li>
+                <li> Deixa a pele mais bonita e com mais viço; </li>
+                <li> Ajuda a elevar a autoestima; </li>
+                <li> São tratamentos não invasivos; </li>
+            </ul>
+        </div>
     </body>
 
-    </html>                                             
+    </html>                                                                
 
