--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html  lang = "pt-br">
 
@@ -17,12 +19,12 @@
             <p> 3° Andar é a sala de teste de produtos </p>
             <p> 4º Andar é armazenado os materiais </p>
             <p> 5° Sala da <strong> CEO </strong>  </p>
-            <img  src = " glow.jpg ">
+            
             
         </div>
 
         <div>
-            <h2>Serviços</h2>
+            <a href="servicos.html"><h2>Serviços</h2>
             <ul>
                 <li> Rinoplastia; 12.599,00 </li>
                 <li> Botox; 2.299,00 </li>
@@ -44,5 +46,4 @@
         </div>
     </body>
 
-    </html>                                                                
-
+    </html>                     
