--- a/index.html
+++ b/index.html
@@ -24,25 +24,12 @@
         </div>
 
         <div>
-            <a href="servicos.html"><h2>Serviços</h2>
-            <ul>
-                <li> Rinoplastia; 12.599,00 </li>
-                <li> Botox; 2.299,00 </li>
-                <li> Otoplastia; 9.999,00 </li>
-                <li> Ritidoplastia; 7.999,00 a 18.000,00 </li>
-                <li> Mentoplastia; 11.000,00 </li>
-            </ul>
+            <a href="servicos.html"><h2>Serviços</h2></a>
       </div>
 
         <div>
-            <h2>benefícios</h2>
-            <ul>
-                <li> Produtos com qualidades; </li>
-                <li> Melhores preços; </li>
-                <li> Deixa a pele mais bonita e com mais viço; </li>
-                <li> Ajuda a elevar a autoestima; </li>
-                <li> São tratamentos não invasivos; </li>
-            </ul>
+            <a href="beneficios.html"><h2>benefícios</h2></a>
+
         </div>
     </body>
 
