--- a/beneficios.html
+++ b/beneficios.html
@@ -18,6 +18,9 @@
                 <li> São tratamentos não invasivos; </li>
             </ul>
         </div>
+                <div>
+            <a href="index.html"><h2>Home</h2></a>
+      </div>
     </body>
 
     </html>    
